# jornada-de-dados-deploying-notebooks

./: .gitignore  README.md  docker-compose.yml  main.py  main_test.py  pyproject.toml  run.sh  test.py
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: main_test.py
