[tool.poetry]
name = "deploying notebooks with jornada de dados"
version = "0.1.0"
description = "This practice is part of Jornada de Dados course about deploying jupyter notebooks"
authors = ["Fefe Alves <monitore.falves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pytest = "^8.3.3"
taskipy = "^1.14.0"
pydantic = "^2.10.1"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"